[package]
name = "wiki_rust_bot"
version = "0.1.0"
edition = "2024"
authors = ["Alex <puschev.alex@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http'] }
worker-macros = { version = "0.8", features = ['http'] }
http = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
urlencoding = "2.1.3"